Minimum working window

--- a/hello-triangle/CMakeLists.txt
+++ b/hello-triangle/CMakeLists.txt
@@ -2,11 +2,17 @@ cmake_minimum_required(VERSION 3.5)
 
 project(hello-triangle)
 set(PROJECT_VERSION 00.00.00)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
 
-add_subdirectory(src)
+set(DEPENDENCIES "${CMAKE_CURRENT_LIST_DIR}/../dependencies")
 
-add_library(
-    main.cpp
-)
+set(INCLUDE_DIRS "${DEPENDENCIES}/include")
 
-add_executable(hello-triangle main.cpp)
+set(LIB "${DEPENDENCIES}/lib")
+set(LIBRARIES "${LIB}/SDL2.lib;${LIB}/SDL2main.lib")
+
+include_directories(${INCLUDE_DIRS})
+link_libraries(${LIBRARIES})
+
+file(GLOB SOURCES "src/*.cpp")
+add_executable(hello-triangle ${SOURCES})
